--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -2,10 +2,20 @@
 @import "constans";
 @import "null";
 @import "common";
+
 .App {
     display: flex;
     flex: 1 1 auto;
     flex-direction: column;
     min-height: 100vh;
     overflow-x: hidden;
+}
+
+::-webkit-scrollbar {
+    width: toRem(3);
+    height: toRem(3);
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: $mainColor;
 }
