--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -5,7 +5,6 @@
 
 .App {
     display: flex;
-    flex: 1 1 auto;
     flex-direction: column;
     min-height: 100vh;
     overflow-x: hidden;
@@ -17,5 +16,5 @@
 }
 
 ::-webkit-scrollbar-thumb {
-    background-color: $mainColor;
+    background-color: $accent;
 }
