--- a/src/scss/constans.scss
+++ b/src/scss/constans.scss
@@ -24,11 +24,13 @@ $accentHover: #6bd804;
 $red: #d30008;
 $whiteColor: #fff;
 $whiteBackground: #f8fafb;
+$greyBackground: #f5f5f5;
 $greyTextColor: #9d9b9b;
 $greyColor: #9ea3b5;
 $bgColor: #142257;
 $bgColorSemi: #1f3584;
 $bgColorLite: #15b2f5;
+$blackTextColor: #161616;
 
 // НАСТРОЙКИ ===============================================================================================================================================================================================================================================================================================
 
