Product Page Update commit

--- a/src/components/UI/Pagination/Pagination.module.scss
+++ b/src/components/UI/Pagination/Pagination.module.scss
@@ -5,6 +5,8 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    margin-top: auto;
+    padding-top: toRem(50);
     &__button {
         display: flex;
         align-items: center;
