--- a/src/pages/Login/components/LoginForm/LoginForm.module.scss
+++ b/src/pages/Login/components/LoginForm/LoginForm.module.scss
@@ -1,4 +1,3 @@
-
 .login {
     display: flex;
     align-items: center;
@@ -8,6 +7,11 @@
     justify-content: center;
     padding: 4.859rem 0;
     width: 100%;
+
+    @media (max-width: 550px) {
+        padding: 0;
+    }
+
     &__container {
         background-color: #fff;
         flex: 1 1 auto; // 1-елемент может увеличиваться в размере если есть свободное пространство, 1-елемент может уменьшаться если не хвататет места, auto-размер задан от того, что внутри
@@ -15,23 +19,32 @@
         max-width: 33.75rem;
         padding: 4.375rem;
         position: relative;
-        &_lAnim{
+
+        &_lAnim {
             animation: loginAnim .5s ease 1;
         }
-        &_rAnim{
+
+        &_rAnim {
             animation: registerAnim .5s ease 1;
         }
+
+        @media (max-width: 550px) {
+            flex: 1 1 auto;
+        }
     }
+
     &__logo {
         display: inline-flex; // займає ширину та висоту по контенту
         position: absolute;
         right: 1.25rem;
         top: 1.25rem;
     }
+
     &__title {
         font-size: 1.737rem;
         text-align: center;
     }
+
     &__subtitle {
         font-size: 0.938rem;
         color: #9d9b9b;
@@ -39,36 +52,42 @@
         text-align: center;
         margin: 0.938rem auto 0;
     }
+
     &__fields {
         display: flex;
         flex-direction: column;
         margin-top: 2.188rem;
         row-gap: 1.25rem;
     }
+
     // email part 
     &__email_part {
         display: flex;
         flex-direction: column;
         row-gap: 1.25rem;
     }
+
     &__email_input {
         border: 0.063rem solid #e9e9e9;
         border-radius: 0.188rem;
         height: 2.5rem;
         padding: 0 0.75rem;
     }
+
     // password part 
     &__password_part {
         display: flex;
         flex-direction: column;
         row-gap: 0.313rem;
-    }  
+    }
+
     &__password_input {
         border: 0.063rem solid #e9e9e9;
         border-radius: 0.188rem;
         height: 2.5rem;
         padding: 0 0.75rem;
-    } 
+    }
+
     &__button {
         display: flex;
         flex-direction: column;
@@ -77,6 +96,7 @@
         row-gap: 0.938rem;
         text-align: center;
     }
+
     // redirect part
     &__redirect {
         display: flex;
@@ -85,28 +105,33 @@
         margin-top: 1.875rem;
         text-align: center;
     }
+
     &__redirect a {
         color: #60c403;
         display: inline-block;
         margin-top: 0.625rem;
     }
 }
+
 @keyframes loginAnim {
-    0%{
+    0% {
         opacity: 0;
         transform: scale(0.7);
     }
-    100%{
+
+    100% {
         opacity: 1;
         transform: scale(1) rotate(0);
     }
 }
+
 @keyframes registerAnim {
-    0%{
+    0% {
         opacity: 0;
         transform: scale(0.7);
     }
-    100%{
+
+    100% {
         opacity: 1;
         transform: scale(1);
     }
