--- a/src/components/UI/Button/Button.module.scss
+++ b/src/components/UI/Button/Button.module.scss
@@ -29,4 +29,10 @@
             background-color: #ab080d;
         }
     }
+    &__icon {
+        color: $whiteColor;
+        width: toRem(20);
+        height: toRem(20);
+    }
 }
+
