--- a/src/components/CartModal/CartModal.module.scss
+++ b/src/components/CartModal/CartModal.module.scss
@@ -1,5 +1,20 @@
 @import "scss/constans";
-
+.modal__hidden {
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    visibility: hidden;
+    opacity: 0;
+    z-index: 99;
+    transition: all .3s ease;
+    & .modal__content {
+        transform: scale(0.5);
+        transition: all .3s ease;
+    }
+}
 .modal {
     position: fixed;
     left: 0;
@@ -7,10 +22,12 @@
     width: 100%;
     height: 100%;
     overflow: hidden;
-    z-index: 99;
+    visibility: visible;
+    opacity: 1;
+    transition: all .3s ease;
+    z-index: 199;
     background: rgba(0,0,0,.387);
     backdrop-filter: blur(toRem(1.6));
-    transition: all .2s ease;
     &__wraper {
         position: absolute;
         left: 0;
@@ -21,6 +38,7 @@
     }
     &__content {
         transform: scale(1);
+        transition: all .3s ease;
         background-color: #fff;
         display: flex;
         flex-direction: column;
@@ -73,6 +91,81 @@
         }
     }
 }
-.product {
+
+
+.body__basket__window__cont {
     display: flex;
+    flex: 1 1 auto;
+    flex-direction: column;
+    overflow-y: hidden;
+}
+.body__basket__window__wrapper {
+    display: flex;
+    flex: 1 1 auto;
+    flex-direction: column;
+}
+.cart__list {
+    .cart__item {
+        display: grid;
+        align-items: center;
+        grid-gap: toRem(10);
+        gap: toRem(10);
+        grid-template-areas: 
+        "i t m"
+        "i q p"
+        "d d d";
+        grid-template-columns: max-content 4fr 1fr;
+        margin-top: toRem(15);
+        padding: toRem(10);
+        &__img {
+            grid-area: i;
+            height: toRem(80);
+            width: toRem(80);
+            & img {
+                height: 100%;
+                left: 0;
+                object-fit: cover;
+                position: absolute;
+                top: 0;
+                width: 100%;
+            }
+        }
+        &__title {
+            grid-area: t;
+            overflow: hidden;
+
+        }
+        &__form {
+            display: flex;
+            align-items: center;
+            align-self: center;
+            grid-area: q;
+            justify-self: start;
+        }
+        &__increase {
+            display: flex;
+            align-items: center;
+            color: #797878;
+            font-style: normal;
+            height: toRem(30);
+            justify-content: center;
+            transition: all .2s ease;
+            width: toRem(30);
+            &::before {
+                color: currentColor;
+                display: inline-block;
+                font-size: toRem(20);
+            }
+        }
+        & .disable {
+            opacity: .4;
+            pointer-events: none;    
+        }
+        &__quantity {
+            border: toRem(1) solid #e9e9e9;
+            height: 30px;
+            text-align: center;
+            width: 30px;
+        }
+   }
 }
