--- a/src/components/MobileMenu/MobileMenu.module.scss
+++ b/src/components/MobileMenu/MobileMenu.module.scss
@@ -1,5 +1,33 @@
 @import "scss/constans";
 
+.modal {
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 300;
+    background-color: rgba(0,0,0,.451);
+    &.entered {
+        transition: all .3s ease;
+        opacity: 0;
+        visibility: hidden;
+    } 
+    &.entering {
+        opacity: 1;
+        visibility: visible;
+    }
+    &.exiting {
+        opacity: 1;
+        transition: all .3s ease;
+        visibility: visible;
+    }
+    &.exited {
+        opacity: 0;
+        visibility: hidden;
+    }
+}
+
 .navbar {
     background-color: $whiteColor;
     height: 100%;
@@ -9,13 +37,96 @@
     padding: toRem(20);
     position: fixed;
     top: 0;
-    -webkit-transform: translateX(-100%);
-    transform: translateX(-100%);
-    transition: all .3s ease;
     width: 100%;
-    z-index: 55;
+    z-index: 160;
+    &__top {
+        position: relative;
+        display: flex;
+    }
+    &__close {
+        display: flex;
+        align-items: center;
+        font-size: toRem(25);
+        justify-content: center;
+        position: absolute;
+        right: toRem(15);
+        top: toRem(7);
+    }
+    &__body {
+        margin-top: toRem(20);
+    } 
+    &__enter {
+        display: flex;
+        justify-content: center;
+        text-align: center;
+        & a:first-child {
+            position: relative;
+            &::before {
+                background-color: #e9e9e9;
+                content: "";
+                height: 80%;
+                pointer-events: none;
+                position: absolute;
+                right: 0;
+                top: 50%;
+                transform: translateY(-50%);
+                width: toRem(2);
+            }
+        }
+    }
+    &__login {
+        font-size: toRem(20);
+        line-height: 100%;
+        padding: toRem(10) toRem(15);
+        text-align: center;
+    }
+    &__registration {
+        font-size: toRem(20);
+        line-height: 100%;
+        padding: toRem(10) toRem(15);
+        text-align: center;
+    }
+    &__profile {
+        display: flex;
+        align-items: center;
+        border-bottom: toRem(1) solid #e9e9e9;
+        border-top: toRem(1) solid #e9e9e9;
+        column-gap: toRem(15);
+        padding: toRem(10) toRem(10) toRem(10) 0;
+    }
+    &__btn {
+        margin-top: toRem(20);
+        padding: toRem(9) toRem(5);
+    }
+    &__list {
+        display: flex;
+        flex-direction: column;
+        margin-top: toRem(35);
+        row-gap: toRem(10);
+    }
+    &__link {
+        font-size: toRem(17);
+        transition: all .2s ease;
+        &:hover {
+            color: $accent;
+        }
+    }
+    .entered & {
+        transform: translateX(-100%);
+        transition: transform .3s ease;
+    } 
+    .entering & {
+        transform: translateX(0);
+    }
+    .exiting & {
+        transform: translateX(0);
+        transition: transform .3s ease;
+    }
+    .exited & {
+        transform: translateX(-100%);
+    }
 }
-.navbar__active {
-    -webkit-transform: translate(0);
-    transform: translate(0);
-}
+
+
+
+
