--- a/src/components/ui/Input/FieldBox.module.scss
+++ b/src/components/ui/Input/FieldBox.module.scss
@@ -3,6 +3,7 @@
     display: flex;
     flex-direction: column;
     row-gap: toRem(5);
+    position: relative;
 }
 .input {
     border: toRem(1) solid #e9e9e9;
@@ -11,8 +12,13 @@
     height: toRem(40);
     padding: 0 toRem(12);
     &:focus {
-        border-color: #60c403;
+        border-color: #5B6AD0;
     } 
+    &::-webkit-outer-spin-button,
+    &::-webkit-inner-spin-button {
+        -webkit-appearance: none;
+        margin: 0;
+    }
 }
 .red__input {
     border-color: $red;
