--- a/src/scss/constans.scss
+++ b/src/scss/constans.scss
@@ -1,5 +1,5 @@
 @use "sass:math";
-
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 // Подключение миксинов ===========================================================================================================================================================================================================================================================================
 @import "mixins";
 
@@ -15,7 +15,7 @@
 //@import "fonts/icons";
 
 // Шрифт по умолчанию ==============================================================================================================================================================================================================================================================================
-$fontFamily: 'Rubik';
+$fontFamily: "Roboto", sans-serif;
 $fontSize: toRem(15); // где 14(px) - размер шрифта по умолчанию из макета
 
 // Основные цвета
@@ -31,6 +31,8 @@ $bgColor: #142257;
 $bgColorSemi: #1f3584;
 $bgColorLite: #15b2f5;
 $blackTextColor: #161616;
+
+$greyVcolor: #F1F2F6;
 
 // НАСТРОЙКИ ===============================================================================================================================================================================================================================================================================================
 
