--- a/src/components/CartModal/CartModal.module.scss
+++ b/src/components/CartModal/CartModal.module.scss
@@ -13,8 +13,13 @@
     & .modal__content {
         transform: scale(0.5);
         transition: all .3s ease;
+        @media(max-width: $mobile) {
+            transform: scale(1);
+            transform: translateX(100%);
+        }
     }
 }
+
 .modal {
     position: fixed;
     left: 0;
@@ -35,6 +40,9 @@
         width: 100%;
         height: 100%;
         background-color: #00000070;
+        @media(max-width: $mobile) {
+            background-color: transparent;
+        }
     }
     &__content {
         transform: scale(1);
@@ -54,6 +62,11 @@
         border-radius: toRem(3);
         box-shadow: 0 0 toRem(12) $blackTextColor;
         max-height: 80vh;
+        @media(max-width: $mobile) {
+            max-height: 100%;
+            height: 100%;
+            transform: translateX(0);
+        }
         &__close {
             display: flex;
             align-items: center;
@@ -97,7 +110,7 @@
     display: flex;
     flex: 1 1 auto;
     flex-direction: column;
-    overflow-y: hidden;
+    overflow-y: auto;
 }
 .body__basket__window__wrapper {
     display: flex;
@@ -119,8 +132,13 @@
         padding: toRem(10);
         &__img {
             grid-area: i;
+            position: relative;
             height: toRem(80);
             width: toRem(80);
+            @media(max-width: $mobile) {
+                height: toRem(56);
+                width: toRem(56);
+            }
             & img {
                 height: 100%;
                 left: 0;
@@ -131,9 +149,14 @@
             }
         }
         &__title {
+            -webkit-line-clamp: 2;
+            -webkit-box-orient: vertical;
+            display: -webkit-box;
             grid-area: t;
             overflow: hidden;
-
+            @media(max-width: $mobile) {
+                font-size: toRem(15);
+            }
         }
         &__form {
             display: flex;
@@ -167,5 +190,97 @@
             text-align: center;
             width: 30px;
         }
+        &__price {
+            grid-area: p;
+            justify-self: end;
+            white-space: nowrap;
+        }
+        &__more {
+            display: flex;
+            align-items: center;
+            outline-color: #797878;
+            align-self: start;
+            cursor: pointer;
+            grid-area: m;
+            height: toRem(30);
+            justify-content: center;
+            justify-self: end;
+            position: relative;
+            user-select: none;
+            width: toRem(30);
+            & svg {
+                stroke: currentColor;
+                height: toRem(18);
+                width: toRem(18);
+            }
+        }
+        &__delete {
+            display: none;
+            background-color: $whiteColor;
+            border-radius: 4px;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, .188);
+            color: $accent;
+            column-gap: toRem(5);
+            align-items: center;
+            padding: 16px;
+            position: absolute;
+            right: 0;
+            top: 50%;
+            transform: translateY(-50%);
+            width: 250px;
+            z-index: 1;
+            @media(max-width: $mobile) {
+                width: toRem(200);
+            }
+            &__show {
+                display: flex;
+                &:hover {
+                    color: $red;
+                }
+                & svg {
+                    stroke: currentColor;
+                    height: toRem(18);
+                    width: toRem(18);
+                }
+            }
+        }
    }
+}
+.footer__basket__window {
+    border-top: 1px solid #e9e9e9;
+    margin-top: auto;
+    padding: toRem(20) toRem(12);
+    &__top {
+        display: flex;
+        align-items: center;
+        font-size: 18px;
+        justify-content: space-between;
+    }
+    &__box {
+        margin-top: toRem(30);
+        text-align: center;
+    }
+    &__btn {
+        max-width: toRem(260);
+        display: inline-block;
+    }
+    &__contbox {
+        margin-top: toRem(15);
+        text-align: center;
+    }
+}
+.basket__window__noItems {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    height: 100%;
+    justify-content: center;
+    row-gap: toRem(50);
+    &__text {
+        font-size: toRem(24);
+    }
+    &__continue {
+        width: toRem(260);
+        font-size: toRem(15);
+    }
 }
