--- a/src/pages/Products/Product/Product.module.scss
+++ b/src/pages/Products/Product/Product.module.scss
@@ -14,6 +14,9 @@
         @media (max-width: 90em) {
             column-gap: toRem(50);
         }
+        @media (max-width: toRem(1030)) {
+            grid-template-columns: 1fr;
+        }
     }
     // picture Teil
     &__img {
@@ -21,13 +24,20 @@
         align-items: center;
         justify-content: center;
         margin: 0;
+        @media (max-width: toRem(1030)) {
+            margin: 0 auto toRem(15);
+        }
     }
 
     &__magnify {
         overflow: hidden;
         cursor: crosshair;
-        height: toRem(440) !important;
-        width: toRem(440) !important;
+        height: toRem(440);
+        width: toRem(440);
+        @media(max-width: $mobileSmall) {
+            height: toRem(328);
+            width: toRem(328);
+        }
     }
 
     &__image {
@@ -48,6 +58,17 @@
         align-items: center;
         column-gap: toRem(25);
         row-gap: toRem(15);
+        @media (max-width: toRem(1030)) {
+            display: grid;
+            grid-column-gap: toRem(50);
+            column-gap: toRem(50);
+            grid-template-columns: max-content max-content 1fr;
+        }
+        @media (max-width: $mobile) {
+            column-gap: toRem(25);
+            grid-template-columns: 1fr 1fr;
+            justify-content: center;
+        }
     }
     &__wrap {
         border: 1px solid #e9e9e9;
@@ -60,6 +81,15 @@
         width: fit-content;
         padding: toRem(10) toRem(50);
         min-width: 0;
+        @media (max-width: toRem(1030)) {
+            margin: 0 auto;
+            max-width: toRem(440);
+            width: 100%;
+        }
+        @media (max-width: $mobile) {
+            max-width: 100%;
+            grid-column: span 2;
+        }
     }
     // unteres Teil
     &__block {
@@ -67,6 +97,7 @@
             border-bottom: 1px solid #e9e9e9;
             margin-bottom: toRem(25);
             padding-bottom: toRem(25);
+            margin-top: toRem(25);
         }
     }
     &__subtitle {
@@ -133,6 +164,11 @@
         display: flex;
         column-gap: toRem(10);
         align-items: center;
+        @media (max-width: $mobileSmall) {
+            align-items: flex-start;
+            flex-direction: column;
+            row-gap: toRem(5);
+        }
     }
     &__response {
         font-size: toRem(14);
@@ -205,6 +241,11 @@
         }
         & p {
             flex: 1 1 auto;
+        }
+        & span {
+            @media (max-width: $mobileSmall) {
+                display: none;
+            }
         }
     }
 }
