--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -5,7 +5,7 @@
 
 .App {
     display: flex;
-    flex-direction: column;
+    // flex-direction: column;
     min-height: 100vh;
     overflow-x: hidden;
 }
@@ -16,5 +16,5 @@
 }
 
 ::-webkit-scrollbar-thumb {
-    background-color: $accent;
+    background-color: #5b6ad0;
 }
