--- a/src/components/Loader/Loader.module.scss
+++ b/src/components/Loader/Loader.module.scss
@@ -19,3 +19,9 @@
     justify-content: center;
     background-color: #fff;
 }
+.preloader {
+    max-width: toRem(180);
+    max-height: toRem(180);
+    width: 100%;
+    height: 100%;
+}
