--- a/src/pages/Main/Main.module.scss
+++ b/src/pages/Main/Main.module.scss
@@ -12,6 +12,9 @@
             row-gap: toRem(25);
         }
     }
+    &__cards {
+        margin-top: toRem(35);
+    }
 }
 
 .slide {
@@ -24,7 +27,6 @@
         left: 0;
         top: 0;
         position: absolute;
-        background-color: #00000070;
         width: 100%;
         height: 100%;
     }
@@ -79,8 +81,6 @@
     .swiper {
         width: 100%;
         max-width: 100%;
-        margin: 0 -15px;
-        padding: 0 5px;
     }
     @media(max-width: em(1200)) {
         max-width: toRem(1200);
@@ -211,5 +211,140 @@
 @media (max-width: em(1200)) {
     .catalog__button__container {
         display: block;
+    }
+}
+// categories
+.items__main {
+    margin-top: toRem(35);
+    &__list {
+        display: grid;
+        grid-template-columns: repeat(7, 1fr);
+        overflow-x: auto;
+        overflow-y: hidden;
+        padding: toRem(15) 0;
+        margin: 0 -.3125rem;
+    }
+    &__link {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        padding: 0 toRem(.3125rem);
+        &__img {
+            height: toRem(110);
+            width: toRem(110);
+            & img {
+                height: 100%;
+                width: 100%;
+                object-fit: cover;
+                object-position: center;
+                transition: all .2s ease;
+            }
+        }
+        &__text {
+            margin-top: toRem(10);
+            position: relative;
+            text-align: center;
+    
+            &::before {
+                background-color: $greyBorder;
+                bottom: toRem(-5);
+                content: "";
+                height: toRem(1);
+                left: 0;
+                position: absolute;
+                transition: width .3s ease;
+                width: 0;
+                box-sizing: border-box;
+            }
+        }
+        &:hover &__text::before {
+            width: 100%;
+            transition: width .3s ease;
+        }
+        &:hover &__img img {
+            transform: scale(1.1);
+        }
+    }
+}
+.show__more__button {
+    display: block;
+    margin: toRem(20) auto 0;
+    padding: toRem(13) toRem(25);
+    max-width: toRem(60);
+}
+/* help main */
+.help-main {
+    margin-top: toRem(35);
+    &__list {
+        display: flex;
+        flex-wrap: wrap;
+        @media(max-width: toRem(1200)) {
+            gap: toRem(10);
+        }
+    }
+    &__item {
+        @media(min-width: toRem(1200)) {
+            flex: 1 1 auto;
+            &:not(:last-child) {
+                border-right: toRem(1) solid rgba(106,213,5,.502);
+            }
+        }
+    }
+    &__link {
+        background: $greyHelpLink;
+        display: block;
+        font-size: toRem(16);
+        line-height: 250%;
+        min-height: toRem(40);
+        text-align: center;
+        &:hover {
+            background-color: rgba(106,213,5,.502);
+        }
+        @media(max-width: toRem(1200)) {
+            border-radius: toRem(10);
+            color: $accent;
+            font-size: toRem(12);
+            padding: toRem(5) toRem(10);
+            background: #f6fff0;
+        }
+    }
+}
+/* info-main */
+.info-main {
+    margin-top: toRem(35);
+    @media(max-width: $mobile) {
+        display: none;
+    }
+    &__title {
+        color: $blackTextColor;
+        font-weight: 700;
+        font-size: toRem(17);
+    }
+    &__info {
+        display: flex;
+        flex-direction: column;
+        line-height: 146.6%;
+        margin-top: toRem(10);
+        row-gap: toRem(10);
+    }
+    &__list {
+        display: flex;
+        flex-direction: column;
+        row-gap: toRem(5);
+    }
+    &__item {
+        display: flex;
+        align-items: center;
+        position: relative;
+        column-gap: toRem(5);
+        &::before {
+            background-color: $accent;
+            border-radius: 50%;
+            content: "";
+            display: inline-block;
+            height: toRem(6);
+            width: toRem(6);
+        }
     }
 }
