--- a/src/scss/constans.scss
+++ b/src/scss/constans.scss
@@ -31,8 +31,10 @@ $bgColor: #142257;
 $bgColorSemi: #1f3584;
 $bgColorLite: #15b2f5;
 $blackTextColor: #161616;
-
+$greyBorder: #b0b0b0;
 $greyVcolor: #F1F2F6;
+$greyHelpLink: #f3f3f3;
+$blackColor: #000;
 
 // НАСТРОЙКИ ===============================================================================================================================================================================================================================================================================================
 
