--- a/src/components/ui/Input/FieldBox.module.scss
+++ b/src/components/ui/Input/FieldBox.module.scss
@@ -12,7 +12,7 @@
     height: toRem(40);
     padding: 0 toRem(12);
     &:focus {
-        border-color: #5B6AD0;
+        border-color: $accent;
     } 
     &::-webkit-outer-spin-button,
     &::-webkit-inner-spin-button {
