--- a/src/pages/Cabinet/components/Content/SideBar/SideBar.module.scss
+++ b/src/pages/Cabinet/components/Content/SideBar/SideBar.module.scss
@@ -3,6 +3,12 @@
 .sidebar {
     border-right: toRem(1) solid hsla(0, 0%, 91%, .678);
     padding-right: toRem(10);
+    @media (max-width: $tablet) {
+        border-bottom: toRem(1) solid hsla(0,0%,91%,.678);
+        border-right: 0;
+        padding-bottom: toRem(30);
+        padding-right: 0;
+    }
     &__list {
         display: flex;
         flex-direction: column;
@@ -27,9 +33,9 @@
     }
 }
 .active {
-    background-color: #9e9e9e;
+    background-color: #e9e9e9;
     &:hover {
-        background-color: #9e9e9e;
+        background-color: #e9e9e9;
     }
 }
 .profile__border {
