--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -4,10 +4,15 @@
 @import "common";
 
 .App {
-    display: flex;
     // flex-direction: column;
+    display: flex;
+    flex-direction: column;
     min-height: 100vh;
     overflow-x: hidden;
+    [data-theme="dark"] & {
+        background-color: $blackTextColor;
+        color: $whiteColor;
+    }
 }
 
 ::-webkit-scrollbar {
@@ -16,5 +21,5 @@
 }
 
 ::-webkit-scrollbar-thumb {
-    background-color: #5b6ad0;
+    background-color: $accent;
 }
